--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-3/int06-11-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-3/int06-11-3.component.html
@@ -12,7 +12,7 @@
 
 
   <br>
-  <div class="ui form">
+  <form class="ui form">
 
     <div class="ui attached  segment">
       <div class="inline fields ">
@@ -858,7 +858,7 @@
           <i class="close icon"></i>ยกเลิก</button>
     </div>
   </div>
-</div>
+</form>
 
 
 
