--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11.component.html
@@ -1,166 +1,174 @@
 <form class="ui container" #ngForm="ngForm" [formGroup]="form" (submit)="handleSubmit($event)">
-  <div class="ui grid">
+    <div class="ui grid">
 
-    <div class="sixteen wide column">
+        <div class="sixteen wide column">
 
-      <div class="ui top centered attached header segment">
-        <span>สร้างเอกสารขอเบิก</span>
-      </div>
-
-      <div class="ui bottom attached segment">
-        <div class="ui form">
-
-          <div class="ui centered inline fields grid">
-
-            <div class="two wide field" [ngClass]="{ 'required': required('bill').required }">
-              <label class="full-width text-right">แบบขอเบิก</label>
+            <div class="ui top centered attached header segment">
+                <span>สร้างเอกสารขอเบิก</span>
             </div>
-            <div class="six wide field" [ngClass]="{ 'error': invalid('bill', ngForm).error }">
-              <select id="bill" name="bill" class="ui fluid dropdown" (change)="handleBill($event)" formControlName="bill">
+
+            <div class="ui bottom attached segment">
+                <div class="ui form">
+
+                    <div class="ui centered inline fields grid">
+
+                        <div class="two wide field" [ngClass]="{ 'required': required('bill').required }">
+                            <label class="full-width text-right">แบบขอเบิก</label>
+                        </div>
+                        <div class="six wide field" [ngClass]="{ 'error': invalid('bill', ngForm).error }">
+                            <select id="bill" name="bill" class="ui fluid dropdown" (change)="handleBill($event)" formControlName="bill">
                 <option value="">กรุณาเลือก</option>
                 <option *ngFor="let bill of bills; let i = index" [value]="bill.value">
                   {{ bill.label }}
                 </option>
               </select>
-            </div>
+                        </div>
 
-          </div>
-
-          <div class="ui centered inline fields grid">
-            <div class="inline fifteen wide field" *ngIf="{ 'hidden': hidden(['2']).hidden }">
-              <div style="width: 100%" class="ui divider"></div>
-            </div>
-          </div>
-
-          <div class="ui centered inline fields grid" [ngClass]="{ 'hidden': hidden(['2','3']).hidden }">
-
-            <div class="one wide field" [ngClass]="{ 'required': required('type').required }">
-              <label class="full-width text-right">ประเภท</label>
-            </div>
-            <div class="five wide field" [ngClass]="{ 'error': invalid('type', ngForm).error }">
-              <select id="type" name="type" class="ui fluid dropdown" formControlName="type">
-                <option value="">กรุณาเลือก</option>
-                <option *ngFor="let type of types; let i = index" [value]="type.value">
-                  {{ type.label }}
-                </option>
-              </select>
-            </div>
-            <div class="one wide field" [ngClass]="{ 'error': required('level').required }">
-              <label class="full-width text-right">ระดับ</label>
-            </div>
-            <div class="five wide field" [ngClass]="{ 'error': invalid('level', ngForm).error }">
-              <select id="level" name="level" class="ui fluid dropdown" formControlName="level">
-                <option value="">กรุณาเลือก</option>
-                <option *ngFor="let level of levels; let i = index" [value]="level.value">
-                  {{ level.label }}
-                </option>
-              </select>
-            </div>
-
-          </div>
-          <ng-container *ngFor="let child of children; let i = index">
-
-            <div class="ui centered inline fields grid" [ngClass]="{ 'hidden': hidden(['1','2','4']).hidden }">
-              <div class="one wide field" [ngClass]="{ 'required': required('chkChild'+i).required }">
-                <div class="ui checkbox">
-                  <input type="checkbox" (change)="handleChkChild($event, i)" formControlName="chkChild{{i}}" name="chkChild{{i}}">
-                  <label></label>
-                </div>
-              </div>
-              <div class="ui fourteen wide field grid">
-                <div class="sixteen wide column">
-
-                  <div class="inline fields">
-                    <div class="four wide field" [ngClass]="{ 'required': required('typeChild'+i).required }">
-                      <label>ประเภทสถานศึกษา</label>
                     </div>
-                    <div class="six wide field" [ngClass]="{ 'required': required('typeEduChild'+i).required }">
-                      <label>ประเภทการศึกษา</label>
+
+                    <div class="ui centered inline fields grid">
+                        <div class="inline fifteen wide field" *ngIf="{ 'hidden': hidden(['2']).hidden }">
+                            <div style="width: 100%" class="ui divider"></div>
+                        </div>
                     </div>
-                    <div class="six wide field" [ngClass]="{ 'required': required('majorChild'+i).required }">
-                      <label>ประเภทวิชา/สาขา</label>
+
+                    <div class="ui centered inline fields grid" [ngClass]="{ 'hidden': hidden(['2','3']).hidden }">
+
+                        <div class="one wide field" [ngClass]="{ 'required': required('type').required }">
+                            <label class="full-width text-right">ประเภท</label>
+                        </div>
+                        <div class="four wide field" [ngClass]="{ 'error': invalid('type', ngForm).error }">
+                            <select id="type" name="type" class="ui fluid dropdown" formControlName="type" (change)="comboTypeChange($event, 'levels')">
+                              <option value="">กรุณาเลือก</option>
+                              <option *ngFor="let type of types | async;" [value]="type.lovId">
+                                {{ type.typeDescription }}
+                              </option>
+                            </select>
+                        </div>
+                        <div class="one wide field" [ngClass]="{ 'error': required('level').required }">
+                            <label class="full-width text-right">ระดับ</label>
+                        </div>
+                        <div class="four wide field" [ngClass]="{ 'error': invalid('level', ngForm).error }">
+                            <select id="level" name="level" class="ui fluid dropdown" formControlName="level" (change)="comboTypeChange($event, 'salarys')">
+                              <option value="">กรุณาเลือก</option>
+                              <option *ngFor="let level of levels | async" [value]="level.lovId">
+                                {{ level.typeDescription }}
+                              </option>
+                            </select>
+                        </div>
+
+                        <div class="one wide field" [ngClass]="{ 'error': required('salary').required }">
+                            <label class="full-width text-right">เงินเดือน</label>
+                        </div>
+                        <div class="four wide field" [ngClass]="{ 'error': invalid('salary', ngForm).error }">
+                            <select id="salary" name="salary" class="ui fluid dropdown" formControlName="salary">
+                            <option value="">กรุณาเลือก</option>
+                            <option *ngFor="let salary of salarys | async" [value]="salary.lovId">
+                              {{ salary.typeDescription }}
+                            </option>
+                          </select>
+                        </div>
+
+
                     </div>
-                  </div>
-                  <div class="inline fields">
-                    <div class="four wide field" [ngClass]="{ 'error': invalid('typeChild'+i, ngForm).error }">
-                      <div class="ui checkbox" [ngClass]="{'disabled': !disabled('chkChild'+i).disabled}">
-                        <input type="radio" name="typeChild{{i}}"
-                          value="สถานศึกษาของทางราชการ" formControlName="typeChild{{i}}">
-                        <label>สถานศึกษาของทางราชการ</label>
-                      </div>
-                    </div>
-                    <div class="six wide field" [ngClass]="{ 'error': invalid('typeEduChild'+i, ngForm).error }">
-                      <select id="typeEduChild{{i}}" name="typeEduChild{{i}}" class="ui fluid dropdown" [attr.disabled]="disabled('chkChild'+i).disabled"
-                        formControlName="typeEduChild{{i}}">
+                    <ng-container *ngFor="let child of children; let i = index">
+
+                        <div class="ui centered inline fields grid" [ngClass]="{ 'hidden': hidden(['1','2','4']).hidden }">
+                            <div class="one wide field" [ngClass]="{ 'required': required('chkChild'+i).required }">
+                                <div class="ui checkbox">
+                                    <input type="checkbox" (change)="handleChkChild($event, i)" formControlName="chkChild{{i}}" name="chkChild{{i}}">
+                                    <label></label>
+                                </div>
+                            </div>
+                            <div class="ui fourteen wide field grid">
+                                <div class="sixteen wide column">
+
+                                    <div class="inline fields">
+                                        <div class="four wide field" [ngClass]="{ 'required': required('typeChild'+i).required }">
+                                            <label>ประเภทสถานศึกษา</label>
+                                        </div>
+                                        <div class="six wide field" [ngClass]="{ 'required': required('typeEduChild'+i).required }">
+                                            <label>ประเภทการศึกษา</label>
+                                        </div>
+                                        <div class="six wide field" [ngClass]="{ 'required': required('majorChild'+i).required }">
+                                            <label>ประเภทวิชา/สาขา</label>
+                                        </div>
+                                    </div>
+                                    <div class="inline fields">
+                                        <div class="four wide field" [ngClass]="{ 'error': invalid('typeChild'+i, ngForm).error }">
+                                            <div class="ui checkbox" [ngClass]="{'disabled': !disabled('chkChild'+i).disabled}">
+                                                <input type="radio" name="typeChild{{i}}" value="สถานศึกษาของทางราชการ" formControlName="typeChild{{i}}">
+                                                <label>สถานศึกษาของทางราชการ</label>
+                                            </div>
+                                        </div>
+                                        <div class="six wide field" [ngClass]="{ 'error': invalid('typeEduChild'+i, ngForm).error }">
+                                            <select id="typeEduChild{{i}}" name="typeEduChild{{i}}" class="ui fluid dropdown" [attr.disabled]="disabled('chkChild'+i).disabled" formControlName="typeEduChild{{i}}">
                         <option value="">กรุณาเลือก</option>
                         <option *ngFor="let typeEduChild of typeEduChilds; let j = index" [value]="typeEduChild.value">
                           {{ typeEduChild.label }}
                         </option>
                       </select>
-                    </div>
-                    <div class="six wide field" [ngClass]="{ 'error': invalid('majorChild'+i, ngForm).error }">
-                      <select id="majorChild{{i}}" name="majorChild{{i}}" class="ui fluid dropdown" [attr.disabled]="disabled('chkChild'+i).disabled"
-                        formControlName="majorChild{{i}}">
+                                        </div>
+                                        <div class="six wide field" [ngClass]="{ 'error': invalid('majorChild'+i, ngForm).error }">
+                                            <select id="majorChild{{i}}" name="majorChild{{i}}" class="ui fluid dropdown" [attr.disabled]="disabled('chkChild'+i).disabled" formControlName="majorChild{{i}}">
                         <option value="">กรุณาเลือก</option>
                         <option *ngFor="let majorChild of majorChilds; let j = index" [value]="majorChild.value">
                           {{ majorChild.label }}
                         </option>
                       </select>
-                    </div>
-                  </div>
-                  <div class="inline fields">
-                    <div class="four wide field" [ngClass]="{ 'error': invalid('typeChild'+i, ngForm).error }">
-                      <div class="ui checkbox" [ngClass]="{'disabled': !disabled('chkChild'+i).disabled}">
-                        <input type="radio" name="typeChild{{i}}"
-                          value="สถานศึกษาของเอกชน" formControlName="typeChild{{i}}">
-                        <label>สถานศึกษาของเอกชน</label>
-                      </div>
-                    </div>
-                    <div class="six wide field" [ngClass]="{ 'required': required('levelChild'+i).required }">
-                      <label>ระดับการศึกษา</label>
-                    </div>
-                  </div>
-                  <div class="inline fields">
-                    <div class="four wide field"></div>
-                    <div class="six wide field" [ngClass]="{ 'error': invalid('levelChild'+i, ngForm).error }">
-                      <select id="levelChild{{i}}" name="levelChild{{i}}" class="ui fluid dropdown" [attr.disabled]="disabled('chkChild'+i).disabled"
-                        formControlName="levelChild{{i}}">
+                                        </div>
+                                    </div>
+                                    <div class="inline fields">
+                                        <div class="four wide field" [ngClass]="{ 'error': invalid('typeChild'+i, ngForm).error }">
+                                            <div class="ui checkbox" [ngClass]="{'disabled': !disabled('chkChild'+i).disabled}">
+                                                <input type="radio" name="typeChild{{i}}" value="สถานศึกษาของเอกชน" formControlName="typeChild{{i}}">
+                                                <label>สถานศึกษาของเอกชน</label>
+                                            </div>
+                                        </div>
+                                        <div class="six wide field" [ngClass]="{ 'required': required('levelChild'+i).required }">
+                                            <label>ระดับการศึกษา</label>
+                                        </div>
+                                    </div>
+                                    <div class="inline fields">
+                                        <div class="four wide field"></div>
+                                        <div class="six wide field" [ngClass]="{ 'error': invalid('levelChild'+i, ngForm).error }">
+                                            <select id="levelChild{{i}}" name="levelChild{{i}}" class="ui fluid dropdown" [attr.disabled]="disabled('chkChild'+i).disabled" formControlName="levelChild{{i}}">
                         <option value="">กรุณาเลือก</option>
                         <option *ngFor="let levelChild of levelChilds; let j = index" [value]="levelChild.value">
                           {{ levelChild.label }}
                         </option>
                       </select>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="fifteen wide field" *ngIf="i != children.length -1">
+                                <div style="width: 100%" class="ui divider"></div>
+                            </div>
+                        </div>
+
+                    </ng-container>
+
+                    <div class="ui centered inline fields grid">
+                        <div class="inline fifteen wide field" *ngIf="{ 'hidden': hidden(['2']).hidden }">
+                            <div style="width: 100%" class="ui divider"></div>
+                        </div>
                     </div>
-                  </div>
 
-                </div>
-              </div>
-              <div class="fifteen wide field" *ngIf="i != children.length -1">
-                <div style="width: 100%" class="ui divider"></div>
-              </div>
-            </div>
-
-          </ng-container>
-
-          <div class="ui centered inline fields grid">
-            <div class="inline fifteen wide field" *ngIf="{ 'hidden': hidden(['2']).hidden }">
-              <div style="width: 100%" class="ui divider"></div>
-            </div>
-          </div>
-
-          <div class="ui centered inline fields grid">
-            <div class="field">
-              <button class="ui primary button" [disabled]="form.controls.bill.value == ''" type="submit">
+                    <div class="ui centered inline fields grid">
+                        <div class="field">
+                            <button class="ui primary button" [disabled]="form.controls.bill.value == ''" type="submit">
                 <i class="plus icon"></i>
                 รายการใหม่
               </button>
+                        </div>
+                    </div>
+
+                </div>
             </div>
-          </div>
 
         </div>
-      </div>
 
     </div>
-
-  </div>
 </form>
