updated healthcare welfare

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-2/int06-11-2.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-2/int06-11-2.component.css
@@ -1,3 +1,7 @@
+td.container {
+  height: 20px;
+}
+
 .hd{
   margin-bottom: -14px !important;
   margin-top: -9px !important;
@@ -5,12 +9,11 @@
 
 input[type=checkbox]
 {
-
--ms-transform: scale(2);
--moz-transform: scale(2);
--webkit-transform: scale(2);
--o-transform: scale(1);
-padding: 6px;
+  -ms-transform: scale(2);
+  -moz-transform: scale(2);
+  -webkit-transform: scale(2);
+  -o-transform: scale(1);
+  padding: 6px;
 }
 .ic{
   margin-left: 34px !important;
