--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-2/int06-11-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-2/int06-11-2.component.html
@@ -408,16 +408,45 @@
             <label>หลักฐานประกอบคำขอเบิก</label>
           </div>
           <div class="four wide field">
-            <input type="text" formControlName="fileName">
-          </div>
-          <div class="two wide field">
-            <button class="ui positive button" type="button">
-              <i class="upload icon"></i>อัพโหลด</button>
+            <!-- <input type="file" #file (change)="onFilesAdded()" multiple /> -->
           </div>
         </div>
+        <div class="inline fields">
+          <div class="two wide field"></div>
+          <div class="twelve wide field">
+            <table class="ui small celled table nowrap striped selectable" style="width: 100%;">
+              <thead>
+                <tr>
+                  <th style="text-align: center !important;">ลำดับที่</th>
+                  <th style="text-align: center !important;">วันที่</th>
+                  <th style="text-align: center !important;">ชื่อเอกสาร</th>
+                  <th style="text-align: center !important;">ขนาด (MB)</th>
+                  <th style="text-align: center !important;">จัดการ</th>
+                </tr>
+              </thead>
+              <!-- <tbody>
+                <tr *ngFor="let file of files; let i = index">
+                  <td class="container" style="text-align: center !important;">{{i+1}}</td>
+                  <td class="container" style="text-align: center !important;">
+                    {{file.lastModifiedDate}}
+                  </td>
+                  <td class="container" style="text-align: center !important;">{{file.name}}</td>
+                  <td class="container" style="text-align: center !important;">
+                    {{file.size}}
+                  </td>
+                  <td class="container" style="text-align: center !important;">
+                    <button type="button" class="ui mini negative button"><i class="trash alternate outline icon"></i>ลบ</button>
+                  </td>
+                </tr>
+              </tbody> -->
+            </table>
+          </div>
+
+        </div>
+
       </div>
 
-      <div class="ui attached  segment">
+      <div class="ui attached segment">
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
             <button class="ui primary button" type="submit" [disabled]="!medicalWelfareForm.valid">
